2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glib/SignalCallback.cs: new methods AddDelegate and RemoveDelegate.

	* generator/Signal.cs: add/remove signal handlers from the delegate used
	to invoke them.

	* generator/SignalHandler.cs: use Delegate instead of MulticastDelegate.

2003-02-05  Rodrigo Moya <rodrigo@ximian.com>

	* gda/Application.cs:
	* gnomedb/Application.cs: synced version number with its corresponding
	C library version.

2003-01-29  Duncan Mak  <duncan@ximian.com>

	* gtk/Window.custom: Add some overloads.

	* api/gtk-api.xml:
	* sources/Gtk.metadata:
	* sources/Pango.metadata: Add some more metadata rules.

2003-01-28  Rodrigo Moya <rodrigo@ximian.com>

	* configure.in:
	* api/gda-api.xml:
	* api/gnomedb-api.xml:
	* sources/gtk-sharp.sources:
	* sources/Gda.metadata: added support for latest libgda/libgnomedb.

2003-01-22  Radek Doulik  <rodo@ximian.com>

	* sources/Gtk.metadata: disable default contructor for Frame in
	metadata

	* parser/gapi2xml.pl: add comment to .xml files with warning that
	they were auto generated

2003-01-20  Mike Kestner  <mkestner@speakeasy.net>

	* released 0.7.

2003-01-12  Martin Baulig  <martin@ximian.com>

	* parser/gapi2xml.pl (addNameElem): Make this work if the $cname
	doesn't start with $prefix.

2003-01-10  Duncan Mak  <duncan@ximian.com>

	* gtk/TextView.custom (WindowToBufferCoords): Remove the hack, as
	the generator produces correct code now.

	* sources/Gtk.metadata (GtkTextView): Add a patch from Fredrik
	Nilsson <jymdman@home.se> to add needed 'out' parameters.

2003-01-09  Rodrigo Moya <rodrigo@ximian.com>

	* makefile:
	* configure.in:
	* api/Makefile.in:
	* api/gphoto-api.xml:
	* sources/gtk-sharp.sources:
	* gphoto/Makefile.in:
	* gphoto/.cvsignore: removed gphoto2 bindings, to be moved to mphoto.

2003-01-06  Pedro Abelleira Seco <pedroabelleira@yahoo.es>

	* pango/Layout.custom: Add Size get property and add some nicer overloads