@@ -10012,8 +10012,8 @@
       <method name="GetDefaultSize" cname="gtk_window_get_default_size">
         <return-type type="void"/>
         <parameters>
-          <parameter type="gint*" name="width"/>
-          <parameter type="gint*" name="height"/>
+          <parameter type="gint*" name="width" pass_as="out"/>
+          <parameter type="gint*" name="height" pass_as="out"/>
         </parameters>
       </method>
       <method name="GetDestroyWithParent" cname="gtk_window_get_destroy_with_parent">
@@ -10065,8 +10065,8 @@
       <method name="GetSize" cname="gtk_window_get_size">
         <return-type type="void"/>
         <parameters>
-          <parameter type="gint*" name="width"/>
-          <parameter type="gint*" name="height"/>
+          <parameter type="gint*" name="width" pass_as="out"/>
+          <parameter type="gint*" name="height" pass_as="out"/>
         </parameters>
       </method>
       <method name="GetTitle" cname="gtk_window_get_title">
