@@ -49,3 +49,13 @@
 						x, y);
 			}
 		}
+
+		public System.Drawing.Size Size {
+			get {
+				int x, y;
+				GetSize (out x, out y);
+				
+				return new System.Drawing.Size (
+						x, y);
+			}
+		}
