@@ -1019,7 +1019,20 @@
     </attribute>
   </data>
 </rule>
-z<rule>
+<rule>
+  <class name="GtkWindow">
+    <method>GetSize</method>
+    <method>GetDefaultSize</method>
+  </class>
+  <data>
+    <attribute target="param">
+      <filter level="type">gint*</filter>
+      <name>pass_as</name>
+      <value>out</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
   <class name="GtkAdjustment">
     <method>Changed</method>
   </class>
