@@ -1,3 +1,9 @@
+2003-02-06  Duncan Mak  <duncan@ximian.com>
+
+	* api/gtk-api.xml:
+	* sources/Gtk.metadata: 
+	* gtk/Window.custom: Mark out params in gtk_window_get_size and gtk_window_get_default_size.
+
 2003-02-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* glib/SignalCallback.cs: new methods AddDelegate and RemoveDelegate.
@@ -14,6 +20,12 @@
 	C library version.
 
 2003-01-29  Duncan Mak  <duncan@ximian.com>
+
+	* gtk/Widget.custom: Add a nice overload, rename it to
+	'RequestSize' instead of 'SizeRequest' to avoid a name clash.
+
+	* api/gtk-api.xml: 
+	* sources/Gtk.metadata: out param for gtk_widget_get_size_request.
 
 	* gtk/Window.custom: Add some overloads.
 
